@@ -1,5 +1,1 @@
 avant-preferences/window.glade
-avant-preferences/avant-preferences.py.in
-data/avant-window-navigator.schemas.in
-
-
