@@ -1,3 +1,10 @@
+2007-03-20  Neil J. Patel  <njpatel@gmail.com>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+	* en_GB.po:
+
 2007-03-07  Neil Jagdish Patel,,,01923 820 124  <njpatel@gmail.com>
 
 	reviewed by: <delete if not using a buddy>
